@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.3 2007/03/16 19:05:17 reed Exp $
+$NetBSD: distinfo,v 1.4 2007/12/01 17:22:22 reed Exp $
 
-SHA1 (mpop-1.0.7.tar.bz2) = fe3172882114d2f17501a069128a117c33b2f096
-RMD160 (mpop-1.0.7.tar.bz2) = cc1f9e1ba2f643e509c8992705c00906aec39e00
-Size (mpop-1.0.7.tar.bz2) = 557870 bytes
+SHA1 (mpop-1.0.12.tar.bz2) = 4618832ddbc84a7f00e8222d1a92ef2ae1f5c60f
+RMD160 (mpop-1.0.12.tar.bz2) = 7e6b609cf59535a67653040a09f2d58aa55cd6cd
+Size (mpop-1.0.12.tar.bz2) = 732061 bytes
